<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="40dp"
        app:cardBackgroundColor="#BA1B65"
        app:cardCornerRadius="12dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toTopOf="@id/container">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_eiffel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/france"
                android:id="@+id/text_france"
                android:textSize="36sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:layout_marginStart="80dp"
                app:layout_constraintStart_toStartOf="@id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paris"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="50dp"
                android:layout_marginStart="80dp"
                app:layout_constraintStart_toStartOf="@id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_france"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/button1"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/circle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/circle"
            android:textColor="@color/red"
            android:textSize="12sp"
            app:backgroundTint="@color/yellow"
            app:cornerRadius="200dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:drawableStart="@drawable/ic_car"
            android:drawablePadding="10dp"
            android:text="@string/button_3"
            android:textColor="@color/white" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/big_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingVertical="8dp"
        android:text="@string/big_button"
        android:textSize="24sp"
        app:backgroundTint="@color/red"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_car"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/big_button"
        android:hint="@string/Введите_текст"
        android:layout_marginHorizontal="16dp"
        android:textSize="28sp"
        android:id="@+id/edit_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>